--- a/navbar/styles.css
+++ b/navbar/styles.css
@@ -13,7 +13,7 @@ li, a, .signup {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 16px;
-  color: black;
+  color: red;
   text-decoration: none;
 
 }
