--- a/navbar/styles.css
+++ b/navbar/styles.css
@@ -76,7 +76,7 @@ li, a, .signup {
 }
 
 .text{
-  color:grey;
+  color:white;
   font-family: 'Noto Sans JP', sans-serif;
   padding-top: 1px;
   font-size: 80%;
