--- a/CSS/styles_team2.css
+++ b/CSS/styles_team2.css
@@ -3,13 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Noto+Sans+JP:wght@500&display=swap');
 
 *{
-  background-color:#ffeddf;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-  
-li, a, .signup, ul {
+
+li, a, .signup, .login {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -18,28 +17,62 @@ li, a, .signup, ul {
 
 }
 
-.navtop {
-  display: flex;
-  justify-content: space-between;
+.navtop{
+  display: flex; /*Display allows the iteams to be in the same line*/
   align-items: center;
-  padding: 30px 10%;
-  
+  position: relative;
+  padding: 20px;
 }
 
-.logo {
-  cursor: pointer
+.navtop ul{
+  float: left;
+}
+
+
+.navtop-centered ul {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);*/
+  display: inline-block;
+  background-color: white; /*just to see how large the area is*/
+}
+
+.navtop-right {
+  float: right;
+  justify-content: space-between;
+
+}
+
+/*adjusting when the window size shrinks*/
+/* Responsive navigation menu (for mobile devices) */
+@media screen and (max-width: 600px) {
+  .navtop li, .navtop-right {
+    float: none;
+    display: block;
+  }
+
+  .navtop-centered li {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
+  }
 }
 
 .nav_links{
   list-style: none;
+  text-align: center;
+
 }
 
 .nav_links li {
   display: inline-block;
-  padding: 0px 20px;
+  padding: 0px 20px; /*controls the spacing in between the links in the navigation bar*/
 }
 
-.nav_links li a {
+.nav_links li a{
   transition: all 0.3s ease 0s;
 }
 
@@ -47,9 +80,25 @@ li, a, .signup, ul {
   color: azure;
 }
 
+.login{
+  padding: 9px 25px;
+  background-color: #FFEDDF;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  /*margin-left:50%;*/
+    margin-right: 5px;*/
+  text-align: left;
+}
+
+.login:hover{
+  background-color: azure;
+}
+
 .signup {
   padding: 9px 25px;
-  background-color: #FBE0C3;
+  background-color: #FFEDDF;
   border: none;
   border-radius: 50px;
   cursor: pointer;
@@ -60,95 +109,9 @@ li, a, .signup, ul {
   background-color: azure;
 }
 
-.download{
-  border-radius: 75px;
-  padding: 9px 25px;
-  cursor: pointer;
-  font-family: 'Noto Sans JP', 'sans-serif';
-  font-size: 16px;
-  transition: all 0.3s ease 0s;
-}
-
-.download:hover{
-  background-color: azure;
-}
-
-.appshow{
-  text-align: left;
-  padding-left: 190px;
-  padding-top: 90px;
-  font-size: xx-large;
-  width: 1500px;
-}
-
-.appshow p{
-  color:grey;
+.text{
+  color:white;
   font-family: 'Noto Sans JP', sans-serif;
+  padding-top: 1px;
   font-size: 80%;
-  padding-bottom: 300px;
-}
-.appshow h1{
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 105%;
-}
-
-.appshow h1, p {
-  display: block;
-  margin-top: 18px;
-}
-
-.appshow img{
-  float:right;
-  width: auto;
-  height: 600px;
-  padding-left: 190px;
-  float:top;
-}
-
-.download{
-  position: relative;
-  left: 180px; 
-}
-
-.videoicon{
-  position: relative;
-  left: 190px;
-  top: 5px;
-}
-
-.button{
-  display: inline-flex;
-  height: 50px;
-  padding: 0;
-  border: none;
-  outline: none;
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 13px;
-  font-weight: 500; 
-  cursor: pointer;
-  position: relative;
-  left: 200px;
-  top: 9px;
-  align-items: center;
-  transition: all 0.3s ease 0s;
-  padding-bottom: 90px;
-}
-
-.button:hover{
-  color: azure;
-}
-
-.button__icon{
-  font-size: 1.5em;
-}
-
-section{
-  display: block;
-  background-color: #FBE0C3;
-  height: 149px;
-}
-
-.inner-panel-tint{
-  position: relative;
-  top: 40px;
 }
